# netkey

./: notes.txt
hackinclude/: getopt_basic.h  udpraw.h
include/: .gitignore  input.h  inputLinux.h  inputWin.h  udpraw_api.h
src/: CMakeLists.txt  input.cpp  inputLinux.cpp  inputWin.cpp  main.cpp
